--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="mobiles-grid">
         <!-- Samsung Galaxy S24 Ultra -->
         <div class="mobile-card">
-          <img src="https://i.postimg.cc/Zq5qdpH8/IMG-20250503-WA0003.jpg" alt="Samsung Galaxy S24 Ultra" />
+          <img src="https://postimage.me/images/2025/05/09/1000001058.jpg" alt="Samsung Galaxy S24 Ultra" />
           <h3>Samsung Galaxy S24 Ultra</h3>
           <p class="price">₹84,998</p>
           <a href="https://amzn.in/d/cqYvDJb" class="buy-btn" target="_blank">Buy on Amazon</a>
@@ -47,7 +47,7 @@
 
         <!-- One Plus Nord CE4 5G -->
         <div class="mobile-card">
-          <img src="https://i.postimg.cc/wTqtY1Rs/IMG-20250503-WA0004.jpg" alt="One Plus Nord CE4 5G" />
+          <img src="https://postimage.me/images/2025/05/09/1000001059.jpg" alt="One Plus Nord CE4 5G" />
           <h3>One Plus Nord CE4 5G</h3>
           <p class="price">₹20,998</p>
           <a href="https://amzn.in/d/iPqME8z" class="buy-btn" target="_blank">Buy on Amazon</a>
