--- a/about.html
+++ b/about.html
@@ -27,9 +27,8 @@
 
       <!-- Custom Logo Centered -->
       <div style="text-align: center; margin: 25px 0;">
-        <img src="https://postimage.me/images/2025/05/11/1000001235.png" alt="Amazo IQ Logo" style="height: 200px;" />
-      </div>
-
+  <img src="https://postimage.me/images/2025/05/11/1000001235.png" alt="Amazo IQ Logo" style="height: 200px; width: 200px; border-radius: 50%; object-fit: cover;" />
+</div>
       <div class="about-section">
         <div class="about-content">
           <p><strong>Amazo IQ</strong> is your smart mobile guide designed to help you discover, compare, and choose the best smartphones available online — all in one place.</p>
