--- a/compare.html
+++ b/compare.html
@@ -75,6 +75,9 @@
         </tbody>
       </table>
     </div>
+    <div class="compare-table-wrapper">
+  <table class="compare-table">...</table>
+    </div>
   </main>
 
   <footer class="site-footer">
