--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <img src="https://postimage.me/images/2025/05/09/1000001058.jpg" alt="Samsung Galaxy S24 Ultra" />
           <h3>Samsung Galaxy S24 Ultra</h3>
           <p class="price">₹84,998</p>
-          <a href="https://amzn.in/d/cqYvDJb" class="buy-btn" target="_blank">Buy on Amazon</a>
+          <a href="https://amzn.to/4kD7ZQf" class="buy-btn" target="_blank">Buy on Amazon</a>
         </div>
 
         <!-- One Plus Nord CE4 5G -->
