--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <img src="https://postimage.me/images/2025/05/09/1000001059.jpg" alt="One Plus Nord CE4 5G" />
           <h3>One Plus Nord CE4 5G</h3>
           <p class="price">₹20,998</p>
-          <a href="https://amzn.in/d/iPqME8z" class="buy-btn" target="_blank">Buy on Amazon</a>
+          <a href="https://amzn.to/4kIiQIU" class="buy-btn" target="_blank">Buy on Amazon</a>
         </div>
       </div>
     </section>
