--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
           <p class="price">₹20,998</p>
           <a href="https://amzn.to/4kIiQIU" class="buy-btn" target="_blank">Buy on Amazon</a>
         </div>
+        <!-- Panasonic 8 Kg 5 Star Fully-Automatic Top Load Washing Machine (2025 Model, NA-F80LF4CRB) -->
+<div class="card">
+  <img src="https://postimage.me/images/2025/05/29/1000003140.jpg" alt="Panasonic Washing Machine">
+  <h3>Panasonic 8 Kg Fully-Automatic</h3>
+  <p>₹16,990</p>
+<a href="https://amzn.to/3FdOFKz">View Details</a>
+</div>
       </div>
     </section>
   </main>
