--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <img src="https://postimage.me/images/2025/05/29/1000003140.jpg" alt="Panasonic Washing Machine">
   <h3>Panasonic 8 Kg Fully-Automatic</h3>
   <p>₹16,990</p>
-<a href="https://amzn.to/3FdOFKz">View Details</a>
+<a href="https://amzn.to/3FdOFKz" class="buy-btn" target="_blank">Buy on Amazon</a>
 </div>
       </div>
     </section>
