--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <a href="https://amzn.to/4kIiQIU" class="buy-btn" target="_blank">Buy on Amazon</a>
         </div>
         <!-- Panasonic 8 Kg 5 Star Fully-Automatic Top Load Washing Machine (2025 Model, NA-F80LF4CRB) -->
-<div class="card">
+<div class="product-card">
   <img src="https://postimage.me/images/2025/05/29/1000003140.jpg" alt="Panasonic Washing Machine">
   <h3>Panasonic 8 Kg Fully-Automatic</h3>
   <p class="price">₹16,990</p>
