--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
   <p class="price">₹16,990</p>
 <a href="https://amzn.to/3FdOFKz" class="buy-btn" target="_blank">Buy on Amazon</a>
 </div>
+    <div class="product-card">
+  <img src="https://postimage.me/images/2025/05/31/1000003315.jpg" alt="Foldable almirah for clothes">
+  <h3>Foldable almirah for clothes</h3>
+  <p class="price">₹889</p>
+<a href="https://amzn.to/3Z7nwQ5" class="buy-btn" target="_blank">Buy on Amazon</a>
+    </div>    
       </div>
     </section>
   </main>
