--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <img src="https://postimage.me/images/2025/05/31/1000003315.jpg" alt="Foldable almirah for clothes">
   <h3>Foldable almirah for clothes</h3>
   <p class="price">₹889</p>
-<a href="https://amzn.to/3Z7nwQ5" class="buy-btn" target="_blank">Buy on Amazon</a>
+<a href="https://amzn.to/3T0kvgV" class="buy-btn" target="_blank">Buy on Amazon</a>
     </div>    
       </div>
     </section>
