--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
   <h3>Foldable almirah for clothes</h3>
   <p class="price">₹889</p>
 <a href="https://amzn.to/3T0kvgV" class="buy-btn" target="_blank">Buy on Amazon</a>
+    </div> 
+        <div class="product-card">
+  <img src="https://postimage.me/images/2025/05/31/1000003320.jpg" alt="Washing machine Stand">
+  <h3>Washing machine Stand</h3>
+  <p class="price">₹889</p>
+<a href="https://amzn.to/43RbrQv" class="buy-btn" target="_blank">Buy on Amazon</a>
     </div>    
       </div>
     </section>
