--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
   <p class="price">₹849</p>
 <a href="https://amzn.to/43RbrQv" class="buy-btn" target="_blank">Buy on Amazon</a>
     </div>    
+        <div class="product-card">
+  <img src="https://postimage.me/images/2025/05/31/1000003320.jpg" alt="Whirlpool 7.5 Kg Top Load Washing Machine">
+  <h3>Whirlpool 7.5 Kg Top Load Washing Machine</h3>
+  <p class="price">₹17,490</p>
+<a href="https://amzn.to/3FNcHwc" class="buy-btn" target="_blank">Buy on Amazon</a>
+    </div>    
       </div>
     </section>
   </main>
