--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
   <p class="price">₹17,490</p>
 <a href="https://amzn.to/3FNcHwc" class="buy-btn" target="_blank">Buy on Amazon</a>
     </div>    
+        <div class="product-card">
+  <img src="https://postimage.me/images/2025/06/10/1000004679.jpg" alt="Soap Dispenser">
+  <h3>Soap Dispenser </h3>
+  <p class="price">₹159</p>
+<a href="https://amzn.to/4lkrIoh" class="buy-btn" target="_blank">Buy on Amazon</a>
+    </div>    
       </div>
     </section>
   </main>
